--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
         "psr-4": {
             "Daley\\Logistics\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Daley\\Logistics\\Tests\\": "tests"
+        }
     }
 }
